themes/custom/sgtsaughters_portfolio/css/styles.css
.breadcrumb-list-list {
  list-style: none;
  overflow: hidden;
  font: 18px Helvetica, Arial, Sans-Serif;
}
.breadcrumb-list li {
  float: left;
}
.breadcrumb-list li a {
  color: white;
  text-decoration: none;
  padding: 16px 0 10px 55px;
  background: brown;                   /* fallback color */
  background: hsla(203,58%,48%,1);
  position: relative;
  display: block;
  float: left;
  height: 50px;
  font-size: 14px;
}
.breadcrumb-list li a:after {
  content: " ";
  display: block;
  width: 0;
  height: 0;
  border-top: 25px solid transparent;           /* Go big on the size, and let overflow hide */
  border-bottom: 25px solid transparent;
  border-left: 15px solid hsla(203,58%,48%,1);
  position: absolute;
  top: 50%;
  margin-top: -25px;
  left: 100%;
  z-index: 2;
}
.breadcrumb-list li a:before {
  content: " ";
  display: block;
  width: 0;
  height: 0;
  border-top: 25px solid transparent;           /* Go big on the size, and let overflow hide */
  border-bottom: 25px solid transparent;
  border-left: 15px solid white;
  position: absolute;
  top: 50%;
  margin-top: -25px;
  margin-left: 1px;
  left: 100%;
  z-index: 1;
}
.breadcrumb-list li:first-child a {
  padding-left: 10px;
}
.breadcrumb-list li:nth-child(2) a       { background:        hsla(203,58%,38%,1); }
.breadcrumb-list li:nth-child(2) a:after { border-left-color: hsla(203,58%,38%,1); }
.breadcrumb-list li:nth-child(3) a       { background:        hsla(203,58%,58%,1); }
.breadcrumb-list li:nth-child(3) a:after { border-left-color: hsla(203,58%,58%,1); }
.breadcrumb-list li:nth-child(4) a       { background:        hsla(203,58%,68%,1); }
.breadcrumb-list li:nth-child(4) a:after { border-left-color: hsla(203,58%,68%,1); }
.breadcrumb-list li:nth-child(5) a       { background:        hsla(203,58%,78%,1); }
.breadcrumb-list li:nth-child(5) a:after { border-left-color: hsla(203,58%,78%,1); }
.breadcrumb-list li:last-child a {
  background: white !important;
  color: black;
  pointer-events: none;
  cursor: default;
}
.breadcrumb-list li:last-child a:after { border: 0; }
.breadcrumb-list li a:hover { background: hsla(203,58%,38%,1); }
.breadcrumb-list li a:hover:after { border-left-color: hsla(203,58%,38%,1) !important; }

